--- a/addiction.html
+++ b/addiction.html
@@ -69,7 +69,8 @@
                     <b>-</b> Outpatient addiction services </br>
                     <b>-</b> Opioid treatment </br>
                     <b>-</b> Suboxone treatment </br>
-                    <b>-</b> Sublocade treatment
+                    <b>-</b> Sublocade treatment </br>
+                    <b>-</b> Micro dosing therapy
                 </p>
             </div>
             <div class="inner">
