--- a/team.html
+++ b/team.html
@@ -54,6 +54,25 @@
                 class="button primary large aestheticButtons">Call Now</a>
         </header>
 
+        <section id="three" class="wrapper style1 special">
+            <div class="inner">
+                <div class="column">
+                    <h3 id="careText">“TREAT OUR STAFF WITH
+                        RESPECT AND KINDNESS.
+
+                        PERIOD.
+
+                        NO EXCEPTIONS.”
+                    </h3>
+                    <h3 id="careText">
+                        “AS THEY WILL DO THE
+                        SAME TO YOU. PERIOD.
+
+                        NO EXCEPTIONS.”</h3>
+                </div>
+            </div>
+        </section>
+
         <!-- Bios -->
         <section id="two" class="wrapper alt">
             <section class="spotlight">
