remove CBD page from menu

--- a/addiction.html
+++ b/addiction.html
@@ -38,7 +38,7 @@
             <li><a href="adult.html">Adult Primary Care</a></li>
             <li><a href="addiction.html">Addiction Recovery</a></li>
             <li><a href="aesthetic.html">Aesthetics</a></li>
-            <li><a href="CBD.html">CBD</a></li>
+            <!--<li><a href="CBD.html">CBD</a></li>-->
             <li><a href="team.html">Meet The Team</a></li>
             <li><a href="#footer" class="scrolly">Contact Us</a></li>
         </ul>
