--- a/adult.html
+++ b/adult.html
@@ -67,6 +67,9 @@
                         <li>
                             <a href="./assets/PCMH FAQ.pdf" class="button primary large scrolly pdfButtons">PCMH FAQ</a>
                         </li>
+                        <li>
+                            <a href="./assets/copays-.pdf" class="button large scrolly pdfButton">Co-pays</a>
+                        </li>
                     </ul>
                 </span>
                 <p>
