--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 
     <section id="bannerAbove">
         <h2>Compassion, Kindness, and Respect</h2>
-        <h5 style="color: white;">Please note - we are not enrolled as a Vaccine Provider or Covid Testing Site. Please
+        <!-- <h5 style="color: white;">Please note - we are not enrolled as a Vaccine Provider or Covid Testing Site. Please
             see the State of Rhode
             Island's website for testing and vaccine locations. The website is: <a
-                href="https://covid.ri.gov/">Covid.RI.Gov</a></h5>
+                href="https://covid.ri.gov/">Covid.RI.Gov</a></h5> -->
     </section>
 
     <!-- Banner -->
@@ -98,17 +98,6 @@
             <button class="collapsible"><i id="expandIcon" class="fas fa-angle-down fa-lg"></i></button>
             <div class="expandableContent" style="padding-top: 1em;">
                 <p>
-
-                    Closed all week <b>May 30th, 2022</b></br>
-
-                    Closed all day <b>July 4th, 2022</b></br>
-
-                    Opens at 1:00PM <b>July 5th, 2022</b></br>
-
-                    Closed all day <b>August 8th, 2022</b></br>
-
-                    Closed all day <b>September 4th, 2022</b></br>
-
                     Closed all day <b>October 10th, 2022</b></br>
 
                     Closed all day <b>November 11th, 2022</b></br>
@@ -270,8 +259,7 @@
                 <p>8:00 am - 4:00 pm &nbsp;&nbsp;&nbsp; Monday - Friday</br>8:00 am - 5:30 pm &nbsp;&nbsp;&nbsp;
                     Wednesday</br>Closed &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday -
-                    Sunday</br>
-                    8:00 am - 12:00 pm &nbsp; First Saturday of Every Month</p>
+                    Sunday</p>
                 <ul class="actions">
                     <li><a href="#banner" class="button scrolly">Learn more</a></li>
                 </ul>
@@ -303,8 +291,8 @@
                     <li class="icon solid fa-home">
                         <a
                             href="https://www.google.com/maps/dir//117+Eddie+Dowling+Hwy,+North+Smithfield,+RI+02896/@41.9801536,-71.5839209,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e46a7ab1adf54f:0xe333249c6a51ff1e!2m2!1d-71.513881!2d41.9801749">Dr.
-                            Linda Young, DNP<br />117 Eddie Dowling
-                            Hwy<br />North Smithfield, RI 02896</a>
+                            Linda Young, DNP<br />6 Blackstone Valley Place<br />Bldg 1 Suite 100<br />Lincoln, RI
+                            02865</a>
                     </li>
                 </ul>
             </section>
