--- a/team.html
+++ b/team.html
@@ -54,7 +54,7 @@
                 class="button primary large aestheticButtons">Call Now</a>
         </header>
 
-        <section id="three" class="wrapper style1 special">
+        <!-- <section id="three" class="wrapper style1 special">
             <div class="inner">
                 <div class="column">
                     <h3 id="careText">“TREAT OUR STAFF WITH
@@ -71,7 +71,7 @@
                         NO EXCEPTIONS.”</h3>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- Bios -->
         <section id="two" class="wrapper alt">
@@ -136,10 +136,9 @@
                 <p>8:00 am - 4:00 pm &nbsp;&nbsp;&nbsp; Monday - Friday</br>8:00 am - 5:30 pm &nbsp;&nbsp;&nbsp;
                     Wednesday</br>Closed &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday -
-                    Sunday</br>
-                    8:00 am - 12:00 pm &nbsp; First Saturday of Every Month</p>
+                    Sunday</p>
                 <ul class="actions">
-                    <li><a href="#main" class="button scrolly">Learn more</a></li>
+                    <li><a href="#banner" class="button scrolly">Learn more</a></li>
                 </ul>
             </section>
             <section class="contact-info">
@@ -169,8 +168,8 @@
                     <li class="icon solid fa-home">
                         <a
                             href="https://www.google.com/maps/dir//117+Eddie+Dowling+Hwy,+North+Smithfield,+RI+02896/@41.9801536,-71.5839209,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e46a7ab1adf54f:0xe333249c6a51ff1e!2m2!1d-71.513881!2d41.9801749">Dr.
-                            Linda Young, DNP<br />117 Eddie Dowling
-                            Hwy<br />North Smithfield, RI 02896</a>
+                            Linda Young, DNP<br />6 Blackstone Valley Place<br />Bldg 1 Suite 100<br />Lincoln, RI
+                            02865</a>
                     </li>
                 </ul>
             </section>
