new office, new imgs

--- a/index.html
+++ b/index.html
@@ -68,22 +68,23 @@
 
     <!-- Banner -->
     <section id="banner">
-        <div class="inner">
-            <h2 class="major special">Primary Care Practice</h2>
-            <p>
-                Now Accepting New Patients | Over 19 Years of Experience |
-                Licensed and Certified
-            </p>
-            <ul class="actions special stacked">
-                <li>
-                    <a href="#one" class="button primary large scrolly" id="newResource"
-                        style="border: 1px solid #ffffff;">New Patient
-                        Resources</a>
-                </li>
-                <!--<li>
+        <div class="inner inner-small">
+            <span class="image"><img class="landing-img" src="images/CC-icon-only.png" alt="Primary care" />
+                <h2 class="major special">Primary Care Practice</h2>
+                <p>
+                    Now Accepting New Patients | Over 19 Years of Experience |
+                    Licensed and Certified
+                </p>
+                <ul class="actions special stacked">
+                    <li>
+                        <a href="#one" class="button primary large scrolly" id="newResource"
+                            style="border: 1px solid #ffffff;">New Patient
+                            Resources</a>
+                    </li>
+                    <!--<li>
                     <a href="https://www.facebook.com/DrYoungDNP" class="button large scrolly">Office Updates</a>
                 </li>-->
-            </ul>
+                </ul>
         </div>
     </section>
 
