new img and closed day

--- a/addiction.html
+++ b/addiction.html
@@ -47,7 +47,7 @@
     <!-- Main -->
     <article id="main">
         <header style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-        url('images/hands.png');">
+        url('images/new9.jpg');">
             <h2 class="major special">Drug Addiction Recovery Treatment</h2>
             <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
             <a href="tel:4017678766"
