--- a/team.html
+++ b/team.html
@@ -125,6 +125,15 @@
                     </p>
                 </div>
             </section>
+            <section class="spotlight">
+                <div class="image"><img class="shorter" src="images/doggo.png" alt="MEdical Assistant" /></div>
+                <div class="content">
+                    <h3 class="major">Welcome </br> Nick!</h3>
+                    <p>
+                        Dr. Linda Young's new pup! He's our newest employee!
+                    </p>
+                </div>
+            </section>
         </section>
     </article>
 
