no suboxone, no new patients, new holiday hours

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <span class="image"><img class="landing-img" src="images/CC-icon-only.png" alt="Primary care" />
                 <h2 class="major special">Primary Care Practice</h2>
                 <p>
-                    Now Accepting New Patients | Over 19 Years of Experience |
+                    Over 19 Years of Experience |
                     Licensed and Certified
                 </p>
                 <ul class="actions special stacked">
@@ -99,19 +99,29 @@
             <button class="collapsible"><i id="expandIcon" class="fas fa-angle-down fa-lg"></i></button>
             <div class="expandableContent" style="padding-top: 1em;">
                 <p>
-                    Closed all day <b>October 14th, 2022</b></br>
+                    Closed all day <b>January 16th, 2023</b> Martin Luther King Day</br>
 
-                    Closed all day <b>November 11th, 2022</b></br>
+                    Closed all day <b>February 20th, 2023</b> Presidents Day</br>
 
-                    Closing at 12:00PM <b>November 23rd, 2022</b></br>
+                    Closed all day <b>May 29th, 2023</b> Memorial Day</br>
 
-                    Closed all day <b>November 24th & 25th, 2022</b></br>
+                    Closed all day <b>June 19th, 2023</b> Juneteenth Day</br>
 
-                    Closed all day <b>December 23rd, 2022</b></br>
+                    Vacation the week of <b>July 3rd</b> reopening <b>July 10th, 2023</b></br>
 
-                    Closed all week <b>December 26th, 2022</b></br>
+                    Closed all day <b>September 4th, 2023</b> Labor Day</br>
 
-                    Closed all day <b>January 2nd, 2023</b>
+                    Closed all day <b>October 9th, 2023</b> Columbus Day/Indigenous People's Day</br>
+
+                    Closed all day <b>November 10th</b> Veterans Day</br>
+
+                    Closing at 12PM <b>November 22nd, 2023</b></br>
+
+                    Closed all day <b>November 23rd & 24th, 2023</b> Thanksgiving</br>
+
+                    Vacation the week of <b>December 25th</b> reopening <b>January 2nd, 2024</b></br>
+
+                    Closed all day <b>January 1st, 2024</b>
                 </p>
             </div>
         </div>
