--- a/addiction.html
+++ b/addiction.html
@@ -68,7 +68,7 @@
                 <p>
                     <b>-</b> Outpatient addiction services </br>
                     <b>-</b> Opioid treatment </br>
-                    <b>-</b> Suboxone treatment </br>
+                    <!-- <b>-</b> Suboxone treatment </br> -->
                     <b>-</b> Sublocade treatment </br>
                     <b>-</b> Micro dosing therapy
                 </p>
