--- a/adult.html
+++ b/adult.html
@@ -51,11 +51,12 @@
                 onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
                 class="button primary large aestheticButtons">Call Now</a>
         </header>
-        <section class="wrapper">
+        <section class="wrapper more-bottom">
             <div class="inner">
                 <h3 style="text-align: center;">Comprehensive Primary Care for Adults</h3>
                 <span class="image left"><img src="images/newPatient-1.png" alt="Primary care" />
-                    <ul class="actions special stacked" style="padding-top: 25px; text-align: center;">
+                    <ul class="actions special stacked"
+                        style="padding-top: 25px; text-align: center; margin-bottom: 5em;">
                         <li>
                             <a href="./assets/NEW PATIENT PACKAGE.pdf"
                                 class="button primary large scrolly pdfButtons">New Patient Registration</a>
@@ -69,6 +70,10 @@
                         </li>
                         <li>
                             <a href="./assets/copays-.pdf" class="button large scrolly pdfButton">Co-pays</a>
+                        </li>
+                        <li>
+                            <a href="./assets/Precription refill policy update.pdf"
+                                class="button primary large scrolly pdfButtons">Refill Policy</a>
                         </li>
                     </ul>
                 </span>
