team removal and email update

--- a/team.html
+++ b/team.html
@@ -90,7 +90,7 @@
                     </p>
                 </div>
             </section>
-            <section class="spotlight">
+            <!-- <section class="spotlight">
                 <div class="image"><img class="shorter" id="onRight" src="images/laVerne.jpg" alt="Practice Manager" />
                 </div>
                 <div class="content">
@@ -112,7 +112,7 @@
                         she is a dedicated team member at Compassionate Care INC.
                     </p>
                 </div>
-            </section>
+            </section> -->
             <section class="spotlight">
                 <div class="image"><img class="shorter" id="onRight" src="images/yeilin.jpg" alt="Medical Assistant" />
                 </div>
@@ -126,7 +126,7 @@
                 </div>
             </section>
             <section class="spotlight">
-                <div class="image"><img class="shorter" src="images/doggo.png" alt="MEdical Assistant" /></div>
+                <div class="image"><img class="shorter" src="images/doggo.png" alt="Medical Assistant" /></div>
                 <div class="content">
                     <h3 class="major">Welcome </br> Nick!</h3>
                     <p>
@@ -160,11 +160,12 @@
                     </li>
                     <li class="icon solid fa-envelope">
                         <a
-                            href="https://mail.google.com/mail/?view=cm&fs=1&to=LindaYoungDNP@protonmail.com&su=Subject&body=Body">LindaYoungDNP@protonmail.com</a>
+                            href="https://mail.google.com/mail/?view=cm&fs=1&to=lyoungnp@verizon.net&su=Subject&body=Body">Email
+                            Us!</a>
                     </li>
                     <li class="icon solid fa-envelope">
                         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=eraremit@aol.com&su=Subject&body=Body">Send
-                            Billing inquiries Here</a>
+                            Billing Inquiries Here</a>
                     </li>
                     <li class="icon brands fa-instagram">
                         <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
