--- a/hairRestoration.html
+++ b/hairRestoration.html
@@ -122,11 +122,12 @@
                     </li>
                     <li class="icon solid fa-envelope">
                         <a
-                            href="https://mail.google.com/mail/?view=cm&fs=1&to=LindaYoungDNP@protonmail.com&su=Subject&body=Body">LindaYoungDNP@protonmail.com</a>
+                            href="https://mail.google.com/mail/?view=cm&fs=1&to=lyoungnp@verizon.net&su=Subject&body=Body">Email
+                            Us!</a>
                     </li>
                     <li class="icon solid fa-envelope">
                         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=eraremit@aol.com&su=Subject&body=Body">Send
-                            Billing inquiries Here</a>
+                            Billing Inquiries Here</a>
                     </li>
                     <li class="icon brands fa-instagram">
                         <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
