--- a/adult.html
+++ b/adult.html
@@ -46,7 +46,7 @@
     <article id="main">
         <header>
             <h2 class="major special">Adult Primary Care</h2>
-            <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
+            <p>Now Accepting New Patients | Over 20 Years of Experience | Licensed and Certified</p>
             <a href="tel:4017678766"
                 onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
                 class="button primary large aestheticButtons">Call Now</a>
@@ -88,31 +88,42 @@
                 </p>
                 <hr />
                 <h4>We Take Care of Your Medical Concerns</h4>
-                <p>
-                    <b>-</b> Annual exams
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b>
-                    Hepatitis A and B vaccines</br>
-                    <b>-</b> GYN exams
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <b>-</b> Pneumonia vaccines</br>
-                    <b>-</b> DOT exams
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <b>-</b> Nebulizer treatment</br>
-                    <b>-</b> Sick visits
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <b>-</b> Worker's compensation evaluations</br>
-                    <b>-</b> UTI testing
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <b>-</b> Trigger point injections</br>
-                    <b>-</b> Pregnancy testing &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Skin tag removal
-                    </br>
-                    <b>-</b> Cholesterol testing &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> PFT's </br>
-                    <b>-</b> A1C testing </br>
-                    <b>-</b> Flu testing </br>
-                    <b>-</b> Strep throat</br>
-                    <b>-</b> Flu vaccines</br>
-                    <b>-</b> TDAP vaccines
-                </p>
+                <div class="table-wrapper marg-bot">
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>Annual exams</td>
+                                <td></td>
+                                <td>DOT exams</td>
+                            </tr>
+                            <tr>
+                                <td>Sick visits</td>
+                                <td></td>
+                                <td>UTI testing</td>
+                            </tr>
+                            <tr>
+                                <td>Cholesterol testing</td>
+                                <td></td>
+                                <td>A1C testing</td>
+                            </tr>
+                            <tr>
+                                <td>Flu testing</td>
+                                <td></td>
+                                <td>Strep throat</td>
+                            </tr>
+                            <tr>
+                                <td>Flu vaccines</td>
+                                <td></td>
+                                <td>Nebulizer treatment</td>
+                            </tr>
+                            <tr>
+                                <td>PFT's</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </section>
     </article>
