--- a/team.html
+++ b/team.html
@@ -48,7 +48,7 @@
         <header style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
         url('images/new7.jpg');">
             <h2 class="major special">Meet The Team</h2>
-            <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
+            <p>Now Accepting New Patients | Over 20 Years of Experience | Licensed and Certified</p>
             <a href="tel:4017678766"
                 onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
                 class="button primary large aestheticButtons">Call Now</a>
@@ -125,7 +125,7 @@
                     </p>
                 </div>
             </section>
-            <section class="spotlight">
+            <!-- <section class="spotlight">
                 <div class="image"><img class="shorter" src="images/doggo.png" alt="Medical Assistant" /></div>
                 <div class="content">
                     <h3 class="major">Welcome </br> Nick!</h3>
@@ -133,7 +133,7 @@
                         Dr. Linda Young's new pup! He's our newest employee!
                     </p>
                 </div>
-            </section>
+            </section> -->
         </section>
     </article>
 
