new team member

--- a/team.html
+++ b/team.html
@@ -125,15 +125,18 @@
                     </p>
                 </div>
             </section>
-            <!-- <section class="spotlight">
-                <div class="image"><img class="shorter" src="images/doggo.png" alt="Medical Assistant" /></div>
+            <section class="spotlight">
+                <div class="image"><img class="shorter" src="images/Janna.png" alt="Medical Assistant" /></div>
                 <div class="content">
-                    <h3 class="major">Welcome </br> Nick!</h3>
+                    <h3 class="major">Janna </br> BSN, RN</h3>
                     <p>
-                        Dr. Linda Young's new pup! He's our newest employee!
+                        We are pleased to welcome Janna Riley BSN, RN to our practice! She has 10+ years of nursing
+                        experience in a multitude of different medical settings. She has experience in acute care and is
+                        currently an endoscopy sedation nurse. She will be coming on board as part of our medical
+                        aesthetics team offering a multitude of services. Please feel free to call for an appointment!
                     </p>
                 </div>
-            </section> -->
+            </section>
         </section>
     </article>
 
