--- a/addiction.html
+++ b/addiction.html
@@ -50,9 +50,7 @@
         url('images/new9.jpg');">
             <h2 class="major special">Drug Addiction Recovery Treatment</h2>
             <p>Now Accepting New Patients | Over 20 Years of Experience | Licensed and Certified</p>
-            <a href="tel:4017678766"
-                onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-                class="button primary large aestheticButtons">Call Now</a>
+            <a href="tel:4017678766" class="button primary large aestheticButtons">Call Now</a>
         </header>
         <section class="wrapper">
             <div class="inner">
@@ -152,9 +150,7 @@
                 <h4 class="major">Get in Touch</h4>
                 <ul class="contact">
                     <li class="icon solid fa-phone">
-                        <a href="tel:4017678766"
-                            onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><span
-                                class="label">(401) 767-8766</span></a>
+                        <a href="tel:4017678766"><span class="label">(401) 767-8766</span></a>
                     </li>
                     <li class="icon solid fa-envelope">
                         <a
