--- a/aesthetic.html
+++ b/aesthetic.html
@@ -48,9 +48,7 @@
         url('images/new1.jpg');">
             <h2 class="major special">Aesthetics</h2>
             <p>Now Accepting New Patients | Over 20 Years of Experience | Licensed and Certified</p>
-            <a href="tel:4017678766"
-                onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-                class="button primary large aestheticButtons">Call Now</a>
+            <a href="tel:4017678766" class="button primary large aestheticButtons">Call Now</a>
         </header>
 
         <!-- Services -->
@@ -112,9 +110,7 @@
                 <h4 class="major">Get in Touch</h4>
                 <ul class="contact">
                     <li class="icon solid fa-phone">
-                        <a href="tel:4017678766"
-                            onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><span
-                                class="label">(401) 767-8766</span></a>
+                        <a href="tel:4017678766"><span class="label">(401) 767-8766</span></a>
                     </li>
                     <li class="icon solid fa-envelope">
                         <a
