--- a/index.html
+++ b/index.html
@@ -279,9 +279,7 @@
                 <h4 class="major">Get in Touch</h4>
                 <ul class="contact">
                     <li class="icon solid fa-phone">
-                        <a href="tel:4017678766"
-                            onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><span
-                                class="label">(401) 767-8766</span></a>
+                        <a href="tel:4017678766"><span class="label">(401) 767-8766</span></a>
                     </li>
                     <li class="icon solid fa-envelope">
                         <a
