--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <title>Dr. Linda Young, DNP | Primary Care</title>
 
     <!-- SEO -->
     <meta name="description"
