--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     </li>
                     <li class="icon solid fa-envelope">
                         <a
-                            href="https://mail.google.com/mail/?view=cm&fs=1&to=lyoungnp@verizon.net&su=Subject&body=Body">Email
+                            href="https://mail.google.com/mail/?view=cm&fs=1&to=LindaYoungDNP@protonmail.com&su=Subject&body=Body">Email
                             Us!</a>
                     </li>
                     <li class="icon solid fa-envelope">
