--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>Dr. Linda Young, DNP | Hair Restoration</title>
+    <title>Dr. Linda Young, DNP | Privacy Policy</title>
 
     <!-- SEO -->
-    <meta name="description" content="Quality Hair Restoration Treatment" />
-    <meta name="keywords" content="Hair, Restoration, Nonsurgical, Quality" />
-    <meta property="og:title" content="Dr. Linda Young, DNP | Hair Restoration" />
-    <meta property="og:description" content="Quality Hair Restoration Treatment" />
+    <meta name="description" content="Cosmetic cures, Revitalize your appearance" />
+    <meta name="keywords" content="Botox, Juvederm, VI Peel, Hair Restoration" />
+    <meta property="og:title" content="Dr. Linda Young, DNP | Aesthetics" />
+    <meta property="og:description" content="Cosmetic cures, Revitalize your appearance" />
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
@@ -48,56 +48,98 @@
     <!-- Main -->
     <article id="main">
         <header style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-        url('images/hairHeader.jpg');">
-            <h2 class="major special">Hair Restoration Treatment</h2>
-            <p>Now Accepting New Patients | Over 20 Years of Experience | Licensed and Certified</p>
+        url('images/new1.jpg');">
+            <h2 class="major special">Privacy Policy</h2>
+            <!-- <p>Now Accepting New Patients | Over 20 Years of Experience | Licensed and Certified</p> -->
             <a href="tel:4017678766" class="button primary large aestheticButtons">Call Now</a>
         </header>
+
+        <!-- Policy -->
         <section class="wrapper">
             <div class="inner">
-                <h3 style="text-align: center;">Platelet Rich Plasma Hair Treatment</h3>
-                <span class="image left"><img src="images/hairTreatment.png" alt="Hair Restoration Treatment" /></span>
+                <h3>Privacy Policy for Text Messaging Services - Dr. Linda Young, DNP</h3>
                 <p>
-                    Treat hair loss with Dr. Linda Young's nonsurgical hair restoration treatment. Give your hair growth
-                    a boost with the help of our advanced procedures. Turn to us for quality hair restoration treatments
-                    in the North Smithfield, RI area.
+                    At the office of Dr. Linda Young, DNP, we understand the importance of maintaining the privacy and
+                    security of your personal information. This Privacy Policy outlines how we collect, use, disclose,
+                    and protect the information we obtain from you through our text messaging services. By opting into
+                    our text messaging services, you agree to the collection, use, and disclosure of your information in
+                    accordance with this Privacy Policy.
                 </p>
-
-                <h4>Selphyl® Platelet-Rich Fibrin Matrix (PRFM)</h4>
+                <h4>1. Information We Collect</h4>
                 <p>
-                    The Selphyl® System is designed for the safe and rapid preparation of Platelet-rich Fibrin Matrix
-                    (PRFM) from a small sample of blood at the patient point of care. Many PRP systems require operator
-                    skill, have varying results and have extensive contamination with red blood cells and white blood
-                    cells.
-                    </br>
-                    Selphyl® removes virtually all contaminating cells and is independent of operator technique. PRP is
-                    converted to PRFM through a controlled process, creating a scaffold that serves to protect and
-                    preserve platelets. Think of Selphyl® PRFM as the next generation PRP.
+                    We may collect personal and health-related information through our text messaging services,
+                    including but not limited to:
                 </p>
+                <ul>
+                    <li>Your name and contact information (such as your phone number).</li>
+                    <li>Health information relevant to your primary care and treatment.</li>
+                    <li>Appointment details, reminders, and follow-up information.</li>
+                </ul>
 
-                <h4>Our Hair Restoration Treatment Includes</h4>
+                <hr />
+
+                <h4>2. Use of Information</h4>
                 <p>
-                    <b>-</b> Platelet rich plasma (PRP) </br>
-                    <b>-</b> Nonsurgical treatment
+                    The information we collect may be used for the following purposes:
                 </p>
+                <ul>
+                    <li>To communicate with you regarding your health care, including appointment reminders, health
+                        monitoring, and follow-up care.</li>
+                    <li>To provide personalized care and treatment.</li>
+                    <li>To improve the quality of our healthcare services.</li>
+                </ul>
 
-                <h4>About Selphyl® PRFM</h4>
+                <hr />
+
+                <h4>3. Disclosure of Information</h4>
                 <p>
-                    Selphyl® PRFM is utilized by physicians in their practices for various applications. The process is
-                    simple and the entire procedure takes approximately 30 minutes. While it may be possible to achieve
-                    your desired results after just one treatment, additional treatments are generally recommended. Your
-                    doctor will determine the best approach for you individually.
+                    We implement a variety of security measures to maintain the safety of your personal information. Our
+                    security practices include:
                 </p>
+                <ul>
+                    <li>To healthcare providers and staff involved in your care.</li>
+                    <li>As required by law, such as in response to a subpoena or other legal processes.</li>
+                    <li>In emergency situations where disclosure is necessary to prevent serious harm to your health or
+                        safety or to the health or safety of others.</li>
+                </ul>
 
-                <h4>The Power of Platelets</h4>
+                <hr />
+
+                <h4>4. Security Measures</h4>
                 <p>
-                    Platelets and other components in human blood migrate to a site of injury. Platelets are known to
-                    release a variety of growth factors that respond to tissue injury, where they initiate and promote
-                    healing. By concentrating platelets at the site of injury, physicians have the potential to enhance
-                    the body’s natural capacity for healing.
+                    We will not disclose your personal information to third parties without your consent, except in the
+                    following circumstances:
+                </p>
+                <ul>
+                    <li>Encrypting text messages to safeguard your information from unauthorized access.</li>
+                    <li>Limiting access to personal information to authorized healthcare providers and staff.</li>
+                    <li>Regularly reviewing and updating our security practices to enhance privacy protections.</li>
+                </ul>
+
+                <hr />
+
+                <h4>5. Your Choices and Rights</h4>
+                <p>
+                    You have the following choices and rights regarding your personal information:
+                </p>
+                <ul>
+                    <li>You may opt-out of our text messaging services at any time by following the opt-out instructions
+                        in our messages or by contacting our office directly.</li>
+                    <li>You have the right to access and request corrections to your personal information held by us.
+                    </li>
+                </ul>
+
+                <hr />
+
+                <h4>6. Changes to This Privacy Policy</h4>
+                <p>
+                    We may update this Privacy Policy from time to time to reflect changes in our practices or legal
+                    requirements. We will notify you of any material changes by posting the new Privacy Policy on our
+                    website and updating the effective date at the top of this policy.
                 </p>
             </div>
         </section>
+    </article>
     </article>
 
     <!-- Footer -->
