--- a/addiction.html
+++ b/addiction.html
@@ -42,6 +42,9 @@
             <li><a href="team.html">Meet The Team</a></li>
             <li><a href="#footer" class="scrolly">Contact Us</a></li>
         </ul>
+        <ul class="actions">
+            <li><a href="privacy-policy.html" class="button scrolly">Privacy Policy</a></li>
+        </ul>
     </nav>
 
     <!-- Main -->
@@ -143,7 +146,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday -
                     Sunday</p>
                 <ul class="actions">
-                    <li><a href="#banner" class="button scrolly">Learn more</a></li>
+                    <li><a href="privacy-policy.html" class="button scrolly">Privacy Policy</a></li>
                 </ul>
             </section>
             <section class="contact-info">
