--- a/generic.html
+++ b/generic.html
@@ -1,173 +1,166 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, user-scalable=1"
-        />
-        <link rel="stylesheet" href="assets/css/main.css" />
-        <link rel="shortcut icon" type="image/png" href="images/tabIcon.png" />
-    </head>
-    <body class="is-preload">
-        <!-- Floating Reviews Badge -->
-        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-        <div class="elfsight-app-e5fb7682-8295-4ab5-a7a6-21fd6ca24cf5"></div>
 
-        <!-- Header -->
-        <header id="header">
-            <h1>
-                <a href="index.html">Dr. Linda S. Young, DNP</a>
-            </h1>
-            <a href="#menu">Menu</a>
+<head>
+    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="shortcut icon" type="image/png" href="images/tabIcon.png" />
+</head>
+
+<body class="is-preload">
+    <!-- Floating Reviews Badge -->
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-e5fb7682-8295-4ab5-a7a6-21fd6ca24cf5"></div>
+
+    <!-- Header -->
+    <header id="header">
+        <h1>
+            <a href="index.html">Dr. Linda S. Young, DNP</a>
+        </h1>
+        <a href="#menu">Menu</a>
+    </header>
+
+    <!-- Menu -->
+    <nav id="menu">
+        <ul class="links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="adult.html">Adult Primary Care</a></li>
+            <li><a href="addiction.html">Addiction Recovery</a></li>
+            <li><a href="aesthetic.html">Aesthetics</a></li>
+            <li><a href="CBD.html">CBD</a></li>
+            <li><a href="team.html">Meet The Team</a></li>
+            <li><a href="#footer" class="scrolly">Contact Us</a></li>
+        </ul>
+        <ul class="actions">
+            <li><a href="privacy-policy.html" class="button scrolly">Privacy Policy</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main -->
+    <article id="main">
+        <header>
+            <h2 class="major special">Generic Page</h2>
+            <p>Aliquam ut ex ut interdum donec imperdiet</p>
         </header>
-
-        <!-- Menu -->
-        <nav id="menu">
-            <ul class="links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="adult.html">Adult Primary Care</a></li>
-                <li><a href="addiction.html">Addiction Recovery</a></li>
-                <li><a href="aesthetic.html">Aesthetics</a></li>
-                <li><a href="CBD.html">CBD</a></li>
-                <li><a href="team.html">Meet The Team</a></li>
-                <li><a href="#footer" class="scrolly">Contact Us</a></li>
-            </ul>
-        </nav>
-		
-        <!-- Main -->
-        <article id="main">
-            <header>
-                <h2 class="major special">Generic Page</h2>
-                <p>Aliquam ut ex ut interdum donec imperdiet</p>
-            </header>
-            <section class="wrapper">
-                <div class="inner">
-                    <h3>Lorem ipsum dolor</h3>
-                    <span class="image left"
-                        ><img src="images/pic04.jpg" alt=""
-                    /></span>
-                    <p>
-                        Morbi mattis mi consectetur tortor elementum, varius
-                        pellentesque velit convallis. Aenean tincidunt lectus
-                        auctor mauris maximus, ac scelerisque ipsum tempor. Duis
-                        vulputate ex et ex tincidunt, quis lacinia velit
-                        aliquet. Duis non efficitur nisi, id malesuada justo.
-                        Maecenas sagittis felis ac sagittis semper. Curabitur
-                        purus leo, tempus sed finibus eget, fringilla quis
-                        risus. Maecenas et lorem quis sem varius sagittis et a
-                        est. Maecenas iaculis iaculis sem. Donec vel dolor at
-                        arcu tincidunt bibendum. Interdum et malesuada fames ac
-                        ante ipsum primis in faucibus. Fusce ut aliquet justo.
-                        Donec id neque ipsum. Integer eget ultricies odio. Nam
-                        vel ex a orci fringilla tincidunt. Aliquam eleifend
-                        ligula non velit accumsan cursus. Etiam ut gravida
-                        sapien.
-                    </p>
-                    <p>
-                        Vestibulum ultrices risus velit, sit amet blandit massa
-                        auctor sit amet. Sed eu lectus sem. Phasellus in odio at
-                        ipsum porttitor mollis id vel diam. Praesent sit amet
-                        posuere risus, eu faucibus lectus. Vivamus ex ligula,
-                        tempus pulvinar ipsum in, auctor porta quam. Proin nec
-                        dui cursus, posuere dui eget interdum. Fusce lectus
-                        magna, sagittis at facilisis vitae, pellentesque at
-                        etiam. Quisque posuere leo quis sem commodo, vel
-                        scelerisque nisi scelerisque. Suspendisse id quam vel
-                        tortor tincidunt suscipit. Nullam auctor orci eu dolor
-                        consectetur, interdum ullamcorper ante tincidunt. Mauris
-                        felis nec felis elementum varius.
-                    </p>
-                    <hr />
-                    <h4>Feugiat aliquam</h4>
-                    <p>
-                        Nam sapien ante, varius in pulvinar vitae, rhoncus id
-                        massa. Donec varius ex in mauris ornare, eget euismod
-                        urna egestas. Etiam lacinia tempor ipsum, sodales
-                        porttitor justo. Aliquam dolor quam, semper in tortor
-                        eu, volutpat efficitur quam. Fusce nec fermentum nisl.
-                        Aenean erat diam, tempus aliquet erat.
-                    </p>
-                    <p>
-                        Etiam iaculis nulla ipsum, et pharetra libero rhoncus
-                        ut. Phasellus rutrum cursus velit, eget condimentum nunc
-                        blandit vel. In at pulvinar lectus. Morbi diam ante,
-                        vulputate et imperdiet eget, fermentum non dolor. Ut
-                        eleifend sagittis tincidunt. Sed viverra commodo mi, ac
-                        rhoncus justo. Duis neque ligula, elementum ut enim vel,
-                        posuere finibus justo. Vivamus facilisis maximus nibh
-                        quis pulvinar. Quisque hendrerit in ipsum id tellus
-                        facilisis fermentum. Proin mauris dui, at vestibulum sit
-                        amet, auctor bibendum neque.
-                    </p>
-                </div>
-            </section>
-        </article>
-
-        <!-- Footer -->
-        <footer id="footer">
+        <section class="wrapper">
             <div class="inner">
-                <section class="about">
-                    <h4 class="major">Hours</h4>
-                    <p>9:00 am - 5:00 pm &nbsp;&nbsp;&nbsp; Monday - Thursday</br>9:00 am - 2:00 pm &nbsp;&nbsp;&nbsp; Friday</br>Closed &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday - Sunday</br>
-						Extended hours are available by appointment only.</p>
-                    <ul class="actions">
-                        <li><a href="contact.html" class="button">Learn more</a></li>
-                    </ul>
-                </section>
-                <section class="contact-info">
-                    <h4 class="major">Get in Touch</h4>
-                    <ul class="contact">
-                        <li class="icon solid fa-phone">
-                            <a
-                                href="tel:4017678766"
-                                onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-                                ><span class="label">(401) 767-8766</span></a
-                            >
-                        </li>
-                        <li class="icon solid fa-envelope">
-                            <a href="#">askWhich@email.to.use</a>
-                        </li>
-                        <li class="icon brands fa-instagram">
-                            <a href="https://www.instagram.com/dryoungdnp/"
-                                >@dryoungdnp</a
-                            >
-                        </li>
-                        <li class="icon brands fa-facebook-f">
-                            <a href="https://www.facebook.com/DrYoungDNP"
-                                >facebook.com/DrYoungDNP</a
-                            >
-                        </li>
-                    </ul>
-                    <ul class="contact">
-                        <li class="icon solid fa-home">
-                            <a href="#"
-                                >Dr. Linda Young, DNP<br />117 Eddie Dowling
-                                Hwy<br />North Smithfield, RI 02896</a
-                            >
-                        </li>
-                    </ul>
-                </section>
-            </div>
-            <div class="copyright">
+                <h3>Lorem ipsum dolor</h3>
+                <span class="image left"><img src="images/pic04.jpg" alt="" /></span>
                 <p>
-                    &copy;
-                    <a href="https://www.webundefined.com"
-                        >Web Undefined, LLC</a
-                    >
-                    All rights reserved.
+                    Morbi mattis mi consectetur tortor elementum, varius
+                    pellentesque velit convallis. Aenean tincidunt lectus
+                    auctor mauris maximus, ac scelerisque ipsum tempor. Duis
+                    vulputate ex et ex tincidunt, quis lacinia velit
+                    aliquet. Duis non efficitur nisi, id malesuada justo.
+                    Maecenas sagittis felis ac sagittis semper. Curabitur
+                    purus leo, tempus sed finibus eget, fringilla quis
+                    risus. Maecenas et lorem quis sem varius sagittis et a
+                    est. Maecenas iaculis iaculis sem. Donec vel dolor at
+                    arcu tincidunt bibendum. Interdum et malesuada fames ac
+                    ante ipsum primis in faucibus. Fusce ut aliquet justo.
+                    Donec id neque ipsum. Integer eget ultricies odio. Nam
+                    vel ex a orci fringilla tincidunt. Aliquam eleifend
+                    ligula non velit accumsan cursus. Etiam ut gravida
+                    sapien.
+                </p>
+                <p>
+                    Vestibulum ultrices risus velit, sit amet blandit massa
+                    auctor sit amet. Sed eu lectus sem. Phasellus in odio at
+                    ipsum porttitor mollis id vel diam. Praesent sit amet
+                    posuere risus, eu faucibus lectus. Vivamus ex ligula,
+                    tempus pulvinar ipsum in, auctor porta quam. Proin nec
+                    dui cursus, posuere dui eget interdum. Fusce lectus
+                    magna, sagittis at facilisis vitae, pellentesque at
+                    etiam. Quisque posuere leo quis sem commodo, vel
+                    scelerisque nisi scelerisque. Suspendisse id quam vel
+                    tortor tincidunt suscipit. Nullam auctor orci eu dolor
+                    consectetur, interdum ullamcorper ante tincidunt. Mauris
+                    felis nec felis elementum varius.
+                </p>
+                <hr />
+                <h4>Feugiat aliquam</h4>
+                <p>
+                    Nam sapien ante, varius in pulvinar vitae, rhoncus id
+                    massa. Donec varius ex in mauris ornare, eget euismod
+                    urna egestas. Etiam lacinia tempor ipsum, sodales
+                    porttitor justo. Aliquam dolor quam, semper in tortor
+                    eu, volutpat efficitur quam. Fusce nec fermentum nisl.
+                    Aenean erat diam, tempus aliquet erat.
+                </p>
+                <p>
+                    Etiam iaculis nulla ipsum, et pharetra libero rhoncus
+                    ut. Phasellus rutrum cursus velit, eget condimentum nunc
+                    blandit vel. In at pulvinar lectus. Morbi diam ante,
+                    vulputate et imperdiet eget, fermentum non dolor. Ut
+                    eleifend sagittis tincidunt. Sed viverra commodo mi, ac
+                    rhoncus justo. Duis neque ligula, elementum ut enim vel,
+                    posuere finibus justo. Vivamus facilisis maximus nibh
+                    quis pulvinar. Quisque hendrerit in ipsum id tellus
+                    facilisis fermentum. Proin mauris dui, at vestibulum sit
+                    amet, auctor bibendum neque.
                 </p>
             </div>
-        </footer>
+        </section>
+    </article>
 
-        <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/jquery.scrolly.min.js"></script>
-        <script src="assets/js/browser.min.js"></script>
-        <script src="assets/js/breakpoints.min.js"></script>
-        <script src="assets/js/util.js"></script>
-        <script src="assets/js/main.js"></script>
-    </body>
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <section class="about">
+                <h4 class="major">Hours</h4>
+                <p>9:00 am - 5:00 pm &nbsp;&nbsp;&nbsp; Monday - Thursday</br>9:00 am - 2:00 pm &nbsp;&nbsp;&nbsp;
+                    Friday</br>Closed &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday -
+                    Sunday</br>
+                    Extended hours are available by appointment only.</p>
+                <ul class="actions">
+                    <li><a href="privacy-policy.html" class="button scrolly">Privacy Policy</a></li>
+                </ul>
+            </section>
+            <section class="contact-info">
+                <h4 class="major">Get in Touch</h4>
+                <ul class="contact">
+                    <li class="icon solid fa-phone">
+                        <a href="tel:4017678766"
+                            onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><span
+                                class="label">(401) 767-8766</span></a>
+                    </li>
+                    <li class="icon solid fa-envelope">
+                        <a href="#">askWhich@email.to.use</a>
+                    </li>
+                    <li class="icon brands fa-instagram">
+                        <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
+                    </li>
+                    <li class="icon brands fa-facebook-f">
+                        <a href="https://www.facebook.com/DrYoungDNP">facebook.com/DrYoungDNP</a>
+                    </li>
+                </ul>
+                <ul class="contact">
+                    <li class="icon solid fa-home">
+                        <a href="#">Dr. Linda Young, DNP<br />117 Eddie Dowling
+                            Hwy<br />North Smithfield, RI 02896</a>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <div class="copyright">
+            <p>
+                &copy;
+                <a href="https://www.webundefined.com">Web Undefined, LLC</a>
+                All rights reserved.
+            </p>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
+
 </html>
