--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             <li><a href="team.html">Meet The Team</a></li>
             <li><a href="#footer" class="scrolly">Contact Us</a></li>
         </ul>
+        <ul class="actions">
+            <li><a href="privacy-policy.html" class="button scrolly">Privacy Policy</a></li>
+        </ul>
     </nav>
 
     <section id="bannerAbove">
@@ -272,7 +275,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday -
                     Sunday</p>
                 <ul class="actions">
-                    <li><a href="#banner" class="button scrolly">Learn more</a></li>
+                    <li><a href="privacy-policy.html" class="button scrolly">Privacy Policy</a></li>
                 </ul>
             </section>
             <section class="contact-info">
