--- a/hairRestoration.html
+++ b/hairRestoration.html
@@ -138,7 +138,7 @@
                 <ul class="contact">
                     <li class="icon solid fa-home">
                         <a
-                            href="https://www.google.com/maps/dir//117+Eddie+Dowling+Hwy,+North+Smithfield,+RI+02896/@41.9801536,-71.5839209,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e46a7ab1adf54f:0xe333249c6a51ff1e!2m2!1d-71.513881!2d41.9801749">Dr.
+                            href="https://www.google.com/maps/dir//6+Blackstone+Valley+Pl+Bldg+1+Suite+100,+Lincoln,+RI+02865/@41.9354522,-71.4967311,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e44357391aee47:0x66735042818dcd00!2m2!1d-71.4554459!2d41.9353957?entry=ttu">Dr.
                             Linda Young, DNP<br />6 Blackstone Valley Place<br />Bldg 1 Suite 100<br />Lincoln, RI
                             02865</a>
                     </li>
