remove botox, hair restoration, and addiction recorvery from the site

--- a/aesthetic.html
+++ b/aesthetic.html
@@ -34,7 +34,7 @@
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="adult.html">Adult Primary Care</a></li>
-            <li><a href="addiction.html">Addiction Recovery</a></li>
+            <!-- <li><a href="addiction.html">Addiction Recovery</a></li> -->
             <li><a href="aesthetic.html">Aesthetics</a></li>
             <!--<li><a href="CBD.html">CBD</a></li>-->
             <li><a href="team.html">Meet The Team</a></li>
@@ -55,7 +55,7 @@
         </header>
 
         <!-- Services -->
-        <section id="two" class="wrapper alt">
+        <!-- <section id="two" class="wrapper alt">
             <section class="spotlight">
                 <div class="image"><img src="images/botoxHeader.jpg" alt="Injection" /></div>
                 <div class="content">
@@ -78,20 +78,20 @@
                     </p>
                     <a href="hairRestoration.html" class="button primary large aestheticButtons">Find Out More</a>
                 </div>
-            </section>
-            <section class="spotlight">
-                <div class="image"><img src="images/vi.jpg" alt="Skin Treatment" /></div>
-                <div class="content">
-                    <h3 class="major">VI Peel Treatment</h3>
-                    <p>
-                        A VI peel from Dr. Linda Young, DNP improves the tone, texture, and clarity of the skin. Reduce
-                        and eliminate your age spots, acne scars and, treat hyperpigmentation with our skin treatments.
-                        This chemical peel not just softens fine lines and wrinkles but also stimulates collagen
-                        production for firmer and more youthful skin.
-                    </p>
-                    <a href="vi.html" class="button primary large aestheticButtons">Find Out More</a>
-                </div>
-            </section>
+            </section> -->
+        <section class="spotlight">
+            <div class="image"><img src="images/vi.jpg" alt="Skin Treatment" /></div>
+            <div class="content">
+                <h3 class="major">VI Peel Treatment</h3>
+                <p>
+                    A VI peel from Dr. Linda Young, DNP improves the tone, texture, and clarity of the skin. Reduce
+                    and eliminate your age spots, acne scars and, treat hyperpigmentation with our skin treatments.
+                    This chemical peel not just softens fine lines and wrinkles but also stimulates collagen
+                    production for firmer and more youthful skin.
+                </p>
+                <a href="vi.html" class="button primary large aestheticButtons">Find Out More</a>
+            </div>
+        </section>
         </section>
     </article>
     </article>
