--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="adult.html">Adult Primary Care</a></li>
-            <li><a href="addiction.html">Addiction Recovery</a></li>
+            <!-- <li><a href="addiction.html">Addiction Recovery</a></li> -->
             <li><a href="aesthetic.html">Aesthetics</a></li>
             <!--<li><a href="CBD.html">CBD</a></li>-->
             <li><a href="team.html">Meet The Team</a></li>
@@ -172,17 +172,17 @@
             <li>
                 <div class="content">
                     <span class="icon solid major fa-user-md"></span>
-                    <h3 class="major">Botox and Juvederm</h3>
+                    <h3 class="major">Aesthetics</h3>
                     <p>
                         Revitalize your appearance safely and effectively
-                        with our Xeomin and Botox injections.
+                        with Dr. Linda Young, DNP.
                     </p>
                     <ul class="actions">
                         <li><a href="aesthetic.html" class="button">Learn More</a></li>
                     </ul>
                 </div>
             </li>
-            <li>
+            <!-- <li>
                 <div class="content">
                     <span class="icon solid major fa-medkit"></span>
                     <h3 class="major">Hair Restoration</h3>
@@ -209,7 +209,7 @@
                         <li><a href="addiction.html" class="button">Learn More</a></li>
                     </ul>
                 </div>
-            </li>
+            </li> -->
         </ul>
     </section>
 
