--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="adult.html">Adult Primary Care</a></li>
-            <li><a href="addiction.html">Addiction Recovery</a></li>
+            <!-- <li><a href="addiction.html">Addiction Recovery</a></li> -->
             <li><a href="aesthetic.html">Aesthetics</a></li>
             <!--<li><a href="CBD.html">CBD</a></li>-->
             <li><a href="team.html">Meet The Team</a></li>
