--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="adult.html">Adult Primary Care</a></li>
             <!-- <li><a href="addiction.html">Addiction Recovery</a></li> -->
-            <li><a href="aesthetic.html">Aesthetics</a></li>
+            <!-- <li><a href="aesthetic.html">Aesthetics</a></li> -->
             <!--<li><a href="CBD.html">CBD</a></li>-->
             <li><a href="team.html">Meet The Team</a></li>
             <li><a href="#footer" class="scrolly">Contact Us</a></li>
@@ -172,13 +172,13 @@
             <li>
                 <div class="content">
                     <span class="icon solid major fa-user-md"></span>
-                    <h3 class="major">Aesthetics</h3>
+                    <h3 class="major">Meet The Team</h3>
                     <p>
-                        Revitalize your appearance safely and effectively
-                        with Dr. Linda Young, DNP.
+                        Dr. Linda Young, DNP's care philosophy has been developed and refined over many years of
+                        practice.
                     </p>
                     <ul class="actions">
-                        <li><a href="aesthetic.html" class="button">Learn More</a></li>
+                        <li><a href="team.html" class="button">Learn More</a></li>
                     </ul>
                 </div>
             </li>
