update janna bio

--- a/team.html
+++ b/team.html
@@ -133,8 +133,7 @@
                     <p>
                         We are pleased to welcome Janna Riley BSN, RN to our practice! She has 10+ years of nursing
                         experience in a multitude of different medical settings. She has experience in acute care and is
-                        currently an endoscopy sedation nurse. She will be coming on board as part of our medical
-                        aesthetics team offering a multitude of services. Please feel free to call for an appointment!
+                        currently an endoscopy sedation nurse.
                     </p>
                 </div>
             </section>
