removal of new patient resources

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             see the State of Rhode
             Island's website for testing and vaccine locations. The website is: <a
                 href="https://covid.ri.gov/">Covid.RI.Gov</a></h5> -->
+        <h5 style="color: white;">Please note - We are not taking new patients at this time.</h5>
     </section>
 
     <!-- Banner -->
@@ -78,16 +79,13 @@
                     Over 20 Years of Experience |
                     Licensed and Certified
                 </p>
-                <ul class="actions special stacked">
+                <!-- <ul class="actions special stacked">
                     <li>
                         <a href="#one" class="button primary large scrolly" id="newResource"
                             style="border: 1px solid #ffffff;">New Patient
                             Resources</a>
                     </li>
-                    <!--<li>
-                    <a href="https://www.facebook.com/DrYoungDNP" class="button large scrolly">Office Updates</a>
-                </li>-->
-                </ul>
+                </ul> -->
         </div>
     </section>
 
