comment out holiday hours for now

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <h3 id="careText">In Association with</h3>
             </div>
             <div class="column"><img id="care" src="images/care.png" alt="CharterCARE logo"></div>
-            <h3 class="major special">Holiday Hours</h3>
+            <!-- <h3 class="major special">Holiday Hours</h3>
             <button class="collapsible"><i id="expandIcon" class="fas fa-angle-down fa-lg"></i></button>
             <div class="expandableContent" style="padding-top: 1em;">
                 <p>
@@ -124,7 +124,7 @@
 
                     Closed all day <b>January 1st, 2024</b>
                 </p>
-            </div>
+            </div> -->
         </div>
     </section>
 
