--- a/index.html
+++ b/index.html
@@ -96,35 +96,33 @@
                 <h3 id="careText">In Association with</h3>
             </div>
             <div class="column"><img id="care" src="images/care.png" alt="CharterCARE logo"></div>
-            <!-- <h3 class="major special">Holiday Hours</h3>
+            <h3 class="major special">Holiday Hours</h3>
             <button class="collapsible"><i id="expandIcon" class="fas fa-angle-down fa-lg"></i></button>
             <div class="expandableContent" style="padding-top: 1em;">
                 <p>
-                    Closed all day <b>January 16th, 2023</b> Martin Luther King Day</br>
+                    Closed all day <b>January 20th, 2025</b> Martin Luther King Day</br>
 
-                    Closed all day <b>February 20th, 2023</b> Presidents Day</br>
+                    Closed all day <b>February 17th, 2025</b> Presidents Day</br>
 
-                    Closed all day <b>May 29th, 2023</b> Memorial Day</br>
+                    Closed all day <b>May 26th, 2025</b> Memorial Day</br>
 
-                    Closed all day <b>June 19th, 2023</b> Juneteenth Day</br>
+                    Closed all day <b>June 19th, 2025</b> Juneteenth Day</br>
 
-                    Vacation the week of <b>July 3rd</b> reopening <b>July 10th, 2023</b></br>
+                    Vacation the week of <b>June 30th</b> reopening <b>July 4th, 2025</b></br>
 
-                    Closed all day <b>September 4th, 2023</b> Labor Day</br>
+                    Closed all day <b>September 1st, 2025</b> Labor Day</br>
 
-                    Closed all day <b>October 9th, 2023</b> Columbus Day/Indigenous People's Day</br>
+                    Closed all day <b>October 13th, 2025</b> Columbus Day/Indigenous People's Day</br>
 
-                    Closed all day <b>November 10th</b> Veterans Day</br>
+                    Closed all day <b>November 11th</b> Veterans Day</br>
 
-                    Closing at 12PM <b>November 22nd, 2023</b></br>
+                    Closed all day <b>November 27th - 28th, 2025</b> Thanksgiving</br>
 
-                    Closed all day <b>November 23rd & 24th, 2023</b> Thanksgiving</br>
+                    Vacation the week of <b>December 25th</b> reopening <b>January 2nd, 2026</b></br>
 
-                    Vacation the week of <b>December 25th</b> reopening <b>January 2nd, 2024</b></br>
-
-                    Closed all day <b>January 1st, 2024</b>
+                    Closed all day <b>January 1st, 2026</b>
                 </p>
-            </div> -->
+            </div>
         </div>
     </section>
 
